--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "name": "my-vercel-app",
     "version": "1.0.0",
-    "scripts": {
-      "start": "node index.js"
-    },
+    "builds": [
+      { "src": "index.js", "use": "@vercel/node" }
+    ],
     "dependencies": {
       "express": "^4.17.1"
     }
