--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "builds": [
       { "src": "index.js", "use": "@vercel/node" }
     ],
-    "dependencies": {
-      "express": "^4.17.1"
-    }
+    "routes": [
+      { "src": "/.*", "dest": "index.js" }
+    ]
   }
