--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "name": "my-vercel-app",
-    "version": "1.0.0",
+    "version": 2,
     "builds": [
       { "src": "index.js", "use": "@vercel/node" }
     ],
